# xai-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: agentic_tool_calling.rs  chat_server_streaming.rs
examples/chat/: agentic_tool_calling.rs  chat_unary.rs
proto/: xai.proto
src/: chat.rs  lib.rs
src/client/: async.rs  async_client.rs  mod.rs  sync.rs
src/errors/: error.rs  mod.rs
src/models/: chat.rs  mod.rs  request.rs
tests/: chat_tests.rs
