[package]
name = "xai-rs"
version = "0.0.2"
edition = "2021"
description = "Rust SDK for xAI API - under active development"
license = "MIT"
repository = "https://github.com/nicoestrada/xai-rs"
authors = ["Nico Estrada <ne13@illinois.edu>"]
keywords = ["xai", "x-ai", "xai-api", "xai-rs"]

[dependencies]
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
futures = "0.3"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"
tonic-prost-build = "0.14.2"
prost-build = "0.13"
fs_extra = "1.3"
walkdir = "2"

[[bin]]
name = "chat"
path = "src/chat.rs"
